[package]
name = "Galaxy"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

[dependencies]
bevy = {version="0.5.0", default-features=true, features = ["dynamic"]}
bevy_webgl2 = {version="0.5.0", optional=true}

winit = {version = "0.24.0"}
rand = "0.8.4"
ang = "0.5.0"
